--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,12 +8,12 @@ set(INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
 # Use CONFIGURE_DEPENDS to automatically reconfigure when files are added/removed
 file(GLOB SRC_FILES CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/src/*.c)
 
-add_executable(LinkedList ${SRC_FILES})
+add_executable(${PROJECT_NAME} ${SRC_FILES})
 
 # Add include directory with absolute path
-target_include_directories(LinkedList PRIVATE ${INCLUDE_DIR})
+target_include_directories(${PROJECT_NAME} PRIVATE ${INCLUDE_DIR})
 
-target_compile_options(LinkedList PRIVATE
+target_compile_options(${PROJECT_NAME} PRIVATE
     -Wall
     -Wextra
     -Wpedantic
